테스트 데이터 생성

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,26 +3,18 @@ server:
 
 spring:
   datasource:
-    # ?autoReconnect=true
     url: jdbc:mysql://localhost:3306/reservation
     username: root
     password: 1111
-#    dbcp2:
-  # true일 경우 커넥션 풀에서 커넥션을 가져올 때 커넥션이 유효한지의 여부를 검사한다.
-#      test-on-borrow: true
-  # query
-#      validation-query: SELECT 1
 
 
   jpa:
     hibernate:
-      # validation - 운영시 : entity들과 db 내용과 맞는지 검증
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: true # table info in console
     show-sql: true # table info in console
-#    database-platform: org.hibernate.dialect.MySQLDialect
   mail:
     host: smtp.gmail.com
     port: 587
@@ -43,7 +35,6 @@ logging:
   level:
     org:
       hibernate:
-#        SQL: DEBUG
         type:
           descriptor:
             sql:
