--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.querydsl</groupId>
